# lnic-university-lab-reports

./: README.md
bachelor/GET-II-Lab-Protocolls/[P1] Frequenzverhalten einfacher RLC-Netzwerke/: [GET II ] Frequenzverhalten einfacher RLC-Netzwerke.tex
bachelor/GET-II-Lab-Protocolls/[P3] Frequenzanalyse periodischer Signale/: [GET II ] Frequenzanalyse periodischer Signale.tex
bachelor/GET-II-Lab-Protocolls/[P4] Schwingkreise/: [GET II ] Schwingkreise.tex
bachelor/GT-Konstruktionsbeleg/: [GT] Konstruktionsbeleg - Präziser Zeitgeber.tex
bachelor/other/notes/: how_to_setup.md  push_yer_notes.sh
master/PLUTOSDR-Project/: README.md
master/PLUTOSDR-Project/src/: manual_stuff.m  messing_around.m  rx_main.m  spectrum_scanner.m  tx_main.m
master/PVS/lab/: rust-benchmark-tutorial.txt
master/PVS/lab/CP1_MC_Speedup/rust/parallel/speedup/: Cargo.toml  flake.nix  last_trajectory.csv  plot.R  plot_amdahl.R  speeds.csv  test.csv  test_all.csv
master/PVS/lab/CP1_MC_Speedup/rust/parallel/speedup/src/: main.rs  msd.rs  parapara.rs
master/PVS/lab/CP1_MC_Speedup/rust/parallel/threads-test/: Cargo.toml
master/PVS/lab/CP1_MC_Speedup/rust/parallel/threads-test/src/: main.rs
master/PVS/lab/lab-1/rtt-benchmark/: Cargo.toml  flake.nix  output_server.csv  run.sh
master/communication-systems/homework-1/: homework-1.tex  preamble.tex  resulttable.tex  sources.bib
master/communication-systems/homework-2/: homework-2.tex
master/network-security-management/project/: Makefile  myown.pygstyle  preamble.tex  project.tex  sources.bib
master/nt-proj/1-windowing/: 1-windowing.tex  (+2 more)
master/preamble/: preamble.tex
(+309 files in other folders)
