[package]
name = "flops-benchmark"
version = "0.1.0"
edition = "2021"
description = "simple benchmark"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.no-opt]
inherits = "release"
opt-level = 0

[dependencies]
clap = { version="4.4.6", features=["derive"]}
csv = "1.3.0"
rand = "0.8.5"
rofi = "0.3.0"
