[package]
name = "MassSpringDamper_Euler_Benchmark"
version = "0.1.0"
edition = "2021"
description = "simple benchmark"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.no-opt]
inherits = "release"
opt-level = 0

[dependencies]
clap = { version="4.4.6", features=["derive"]}
core_affinity = "0.8.1"
csv = "1.3.0"
ctrlc = "3.4.1"
ndarray = "0.15.6"
rand = "0.8.5"
rofi = "0.3.0"
