[package]
name = "threads-test"
version = "0.1.0"
edition = "2021"
description = "just testing out threads"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.no-opt]
inherits = "release"
opt-level = 0

[dependencies]
clap = { version="4.4.6", features=["derive"]}
core_affinity = "0.8.1"
rand = "0.8.5"
